<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomGridPage.TaxCalculator"
    android:padding="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/strock_line"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:id="@+id/tvDisplay1"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="#79757575"
                android:hint="@string/tax_display1"
                android:gravity="center"
                android:paddingVertical="5dp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvDisplay2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textColorHint="#79757575"
                android:hint="@string/tax_display2"
                android:gravity="center_horizontal"
                android:paddingVertical="5dp"
                android:textStyle="bold"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/strock_line"
            android:paddingVertical="20dp"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_cl_item1"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/tx_cl_hint1"
                    android:minHeight="48dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/edBasicSalary"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_cl_item2"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/tx_cl_hint2"
                    android:minHeight="48dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/edHouseRent"
                    android:gravity="center"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_cl_item3"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/tx_cl_hint3"
                    android:minHeight="58dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/edAgriculIncome"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_cl_item4"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/tx_cl_hint4"
                    android:minHeight="58dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/edBusinessIncome"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_cl_item5"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/tx_cl_hint5"
                    android:minHeight="48dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/edOtherIncome"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_cl_item6"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/tx_cl_hint6"
                    android:minHeight="48dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/edFestivalBonus"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_cl_item7"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/tx_cl_hint7"
                    android:minHeight="48dp"
                    android:inputType="numberDecimal"
                    android:id="@+id/edGoldVori"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calculateBtn"
            android:layout_marginTop="20dp"
            android:text="@string/calculation_tax"
            android:background="@drawable/btn_ripple_effect"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetBtn"
            android:layout_marginTop="20dp"
            android:text="Reset All"
            android:background="@drawable/btn_ripple_effect"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            />


    </LinearLayout>
</ScrollView>