<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomGridPage.E_TIN"
    android:padding="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_tin_title1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22sp"
            android:gravity="center"
            android:background="@drawable/bg_shape_no1"
            android:paddingHorizontal="4dp"
            android:paddingVertical="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/e_tin_title1_des"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_tin_title2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_shape_no1"
            android:paddingHorizontal="4dp"
            android:paddingVertical="5dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/e_tin_title2_des"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_tin_title3"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:background="@drawable/bg_shape_no1"
            android:paddingHorizontal="4dp"
            android:paddingVertical="5dp"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_tin_title3_des"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textIsSelectable="false"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/stregth_line"
            android:layout_marginVertical="15dp"
            />

        <WebView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/webView"
            android:layout_marginBottom="15dp"
            />



    </LinearLayout>
</ScrollView>